# Team-191-GetFunding

./: .gitignore  Process.txt  Procfile  README.md  __main__.py.save  app.properties  config.py  configuration.py  mysecrets.py  pyproject.toml  requirements.txt  wsgi.py
UI/: README.md  package-lock.json  package.json
UI/src/: App.js  index.css  serviceWorker.js
frontend/: package-lock.json  package.json
frontend/landingpage/: index.html  styles.css
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/Auth/: Login.js
frontend/src/components/Auth/Login/: Login.js
frontend/src/components/Auth/Register/: Register.js  RegisterBorrower.js  RegisterLender.js
frontend/src/components/Landing/: index.js  landing.css
frontend/src/components/layout/: Alerts.js  Header.js
frontend/src/components/layout/Buttons/: ButtonCTA.js
frontend/src/components/layout/Header/: header.css  index.js
src/: __init__.py  app.py  email.py  models.py  register.py  token.py
src/Scoring/: ClassificationModel.py  DataSimulation.py  ModelCreation.py  RegressionModel.py  credit_model.py  credit_prediction  default_model.py  default_prediction  make_predictions.py  model_prediction
src/Scoring/datasets/: borrower_dataset.csv  loan_dataset.csv  train_set.csv
src/Users/: __init__.py  login.py  logout.py  register.py
src/Users/templates/: activatemail.html
src/models/: Borrower.py  Lender.py  User.py  __init__.py
tests/: __init__.py  conftest.py  test_DataSimulation.py  test_register.py  test_unit_register.py
