[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = [
    "Authors Here"
]

[tool.poetry.dependencies]
python = "^3.7"

flask-sqlalchemy = "^2.4.1"
numpy = "^1.18.4"
faker = "^4.0.3"
pyjanitor = "^0.20.5"
psycopg2 = "^2.8.5"
gunicorn = "^20.0.4"
python-decouple = "^3.3"
flask-jwt-extended = "^3.24.1"
flask-login = "^0.5.0"
Flask-Mail = "^0.9.1"
itsdangerous = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
psycopg2-binary = "^2.8.5"

[tool.poetry.scripts]
app = "src.app:run"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

